tests/ui/typeck/typeck-builtin-bound-type-parameters.stderr
error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:1:11
   |
LL | fn foo1<T:Copy<U>, U>(x: T) {}
   |           ^^^^--- help: remove the unnecessary generics
   |           |
   |           expected 0 generic arguments

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^---------- help: remove the unnecessary generics
   |              |
   |              expected 0 generic arguments

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^---------- help: remove the unnecessary generics
   |              |
   |              expected 0 generic arguments
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^---------- help: remove the unnecessary generics
   |              |
   |              expected 0 generic arguments
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:9:21
   |
LL | struct MyStruct1<T: Copy<T>>(T);
   |                     ^^^^--- help: remove the unnecessary generics
   |                     |
   |                     expected 0 generic arguments

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:12:25
   |
LL | struct MyStruct2<'a, T: Copy<'a>>(&'a T);
   |                         ^^^^---- help: remove the unnecessary generics
   |                         |
   |                         expected 0 lifetime arguments

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:15:15
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |               ^^^^ -- help: remove the lifetime argument
   |               |
   |               expected 0 lifetime arguments

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:15:15
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |               ^^^^     - help: remove the unnecessary generic argument
   |               |
   |               expected 0 generic arguments

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0107`.
